--- a/Neo.Core/Neo.Core.csproj
+++ b/Neo.Core/Neo.Core.csproj
@@ -4,9 +4,21 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Cryptography\**" />
+    <EmbeddedResource Remove="Cryptography\**" />
+    <None Remove="Cryptography\**" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Neo.Common\Neo.Common.csproj" />
+    <ProjectReference Include="..\Neo.Database.Models\Neo.Database.Models.csproj" />
     <ProjectReference Include="..\Neo.Implementations.Wallets.EntityFramework\Neo.Implementations.Wallets.EntityFramework.csproj" />
+    <ProjectReference Include="..\Neo.Network\Neo.Network.csproj" />
     <ProjectReference Include="..\Neo.VM\Neo.VM.csproj" />
   </ItemGroup>
 
@@ -16,10 +28,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Pack>true</Pack>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Cryptography\" />
   </ItemGroup>
 
 </Project>
