--- a/Neo.VM/Neo.VM.csproj
+++ b/Neo.VM/Neo.VM.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Neo.Common\Neo.Common.csproj" />
+    <ProjectReference Include="..\Neo.Cryptography\Neo.Cryptography.csproj" />
+  </ItemGroup>
+
 </Project>
