--- a/Neo.Implementations.Blockchains.LevelDB/Neo.Implementations.Blockchains.LevelDB.csproj
+++ b/Neo.Implementations.Blockchains.LevelDB/Neo.Implementations.Blockchains.LevelDB.csproj
@@ -6,8 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neo.Common\Neo.Common.csproj" />
-    <ProjectReference Include="..\Neo.Cryptography\Neo.Cryptography.csproj" />
-    <ProjectReference Include="..\Neo.SmartContract\Neo.SmartContract.csproj" />
+    <ProjectReference Include="..\Neo.Core\Neo.Core.csproj" />
   </ItemGroup>
 
 </Project>
