--- a/Neo.Network/Neo.Network.csproj
+++ b/Neo.Network/Neo.Network.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Neo.Cryptography\Neo.Cryptography.csproj" />
+  </ItemGroup>
+
 </Project>
