--- a/Neo.Wallet.WinForms/neo-gui/packages.config
+++ b/Neo.Wallet.WinForms/neo-gui/packages.config
@@ -1,60 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Libuv" version="1.10.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Hosting" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel.Core" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel.Https" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel.Transport.Libuv" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.WebSockets" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net462" />
-  <package id="Microsoft.Data.Sqlite" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Data.Sqlite.Core" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Sqlite.Core" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.WebSockets" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite.Core" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite.Core" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Packaging.Tools" version="1.0.0-preview2-25401-01" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="NETStandard.Library" version="2.0.0" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="Remotion.Linq" version="2.2.0-alpha-004" targetFramework="net462" />
+  <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="SQLite" version="3.13.0" targetFramework="net461" />
   <package id="SQLite.Native" version="3.12.3" targetFramework="net461" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.7" targetFramework="net462" />
-  <package id="SQLitePCLRaw.core" version="1.1.7" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.7" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.7" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.7" targetFramework="net462" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.7" targetFramework="net462" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.8" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.8" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.8" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.8" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -68,6 +58,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net462" />
@@ -96,6 +87,7 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
